--- a/index.html
+++ b/index.html
@@ -121,6 +121,10 @@
           <div class="label">Ayaka</div>
           <img src="./aya.png" alt="Hannari Komachi (Sanrio)" />
         </figure>
+		<figure class="char">
+          <div class="label">Fede</div>
+          <img src="./fede.png" alt="Espresso (Sanrio)" />
+        </figure>
       </div>
     </section>
   </main>
@@ -136,7 +140,7 @@ const CONFIG = {
   messageJA: "お誕生日おめでとう、あやかさん！\n出会ってくれてありがとう。これからもよろしくね。\nマルティナより 💐",
   titleIT: "Una piccola sorpresa ✨",
   subtitleIT: "Clicca per aprire",
-  messageIT: "Buon compleanno, Ayaka!\nGrazie per la tua amicizia. Con affetto, Martina 💐"
+  messageIT: "Buon compleanno, Ayaka!\nGrazie per la tua amicizia. Con affetto, Martina e Federica 💐"
 };
 
 // ==== STARFIELD ==============================================================
