--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ const CONFIG = {
   toName: "Ayaka",            // Nome destinataria (mostra "___ さんへ" se vuoto)
   titleJA: "小さなサプライズ ✨",
   subtitleJA: "クリックして開いてください",
-  messageJA: "お誕生日おめでとう、あやかさん！\n出会ってくれてありがとう。これからもよろしくね。\nマルティナより 💐",
+  messageJA: "お誕生日おめでとう、あやかさん！\n出会ってくれてありがとう。これからもよろしくね。\nマルティナとフェデリカより 💐",
   titleIT: "Una piccola sorpresa ✨",
   subtitleIT: "Clicca per aprire",
   messageIT: "Buon compleanno, Ayaka!\nGrazie per la tua amicizia. Con affetto, Martina e Federica 💐"
